tests/NormalTests/paczka1/small_fuzzy/54952913.err
Error in line 1: 7kmRUs A282 46,3
Error in line 5: gq1MMVE S93 78,3
Error in line 7: 7kmRUs A999 8,5
